--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,13 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Open+Sans:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=DM+Sans:wght@400;700&display=swap');
 
-@import 'common/variables';
+// 1. Include functions first (so you can manipulate colors, SVGs, calc, etc)
+@import "../../node_modules/bootstrap/scss/functions";
+@import "./helpers/px-to-rem";
 
-// @import 'bootstrap';
+// 2. Include any default variable overrides here
+@import "./overrides/variables";
 
-// @import 'mixins/buttons',
-//         'mixins/images';
+// 3. Include remainder of required Bootstrap stylesheets
+@import "../../node_modules/bootstrap/scss/variables";
+@import "../../node_modules/bootstrap/scss/mixins";
+@import "../../node_modules/bootstrap/scss/maps";
 
-// @import 'common/icons',
-//         'common/typography';
+// 4. Include any optional Bootstrap components as you like
+@import "../../node_modules/bootstrap/scss/root";
+@import "../../node_modules/bootstrap/scss/reboot";
+@import "../../node_modules/bootstrap/scss/type";
+@import "../../node_modules/bootstrap/scss/containers";
 
-// @import '../../node_modules/select2/src/scss/core';
+// 5. Add additional custom code here
+
