WHUB-244: Added AtkinsonHyperlegible to paragraphs

--- a/src/sass/helpers/px-to-rem.scss
+++ b/src/sass/helpers/px-to-rem.scss
@@ -2,3 +2,8 @@
     $remValue: ($value / 16) + rem; 
     @return $remValue;
 }
+
+@function pxtoem($value, $base) {
+    $emValue: ($value / $base) + em; 
+    @return $emValue;
+}
