--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,4 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=DM+Sans:wght@400;700&display=swap');
+@font-face {
+    font-family: 'AtkinsonHyperlegible';
+    src: url('/fonts/atkinson-hyperlegible/EOT/Atkinson-Hyperlegible-Regular-102.eot'); /* IE9 Compat Modes */
+    src: url('/fonts/atkinson-hyperlegible/EOT/Atkinson-Hyperlegible-Regular-102.eot') format('embedded-opentype'), /* IE6-IE8 */
+        url('/fonts/atkinson-hyperlegible/WOFF2/Atkinson-Hyperlegible-Regular-102a.woff2') format('woff2'), /* Super Modern Browsers */
+        url('/fonts/atkinson-hyperlegible/WOFF/Atkinson-Hyperlegible-Regular-102.woff') format('woff'), /* Pretty Modern Browsers */
+        url('/fonts/atkinson-hyperlegible/TTF/Atkinson-Hyperlegible-Regular-102')  format('truetype'), /* Safari, Android, iOS */
+        url('/fonts/atkinson-hyperlegible/SVG/Atkinson-Hyperlegible-Regular-102') format('svg'); /* Legacy iOS */
+    font-weight: 400;
+    font-style: normal;
+}
 
 // 1. Include functions first (so you can manipulate colors, SVGs, calc, etc)
 @import "../../node_modules/bootstrap/scss/functions";
@@ -12,11 +23,16 @@
 @import "../../node_modules/bootstrap/scss/mixins";
 @import "../../node_modules/bootstrap/scss/maps";
 
-// 4. Include any optional Bootstrap components as you like
+// 4. Component variable overrides
+@import "./overrides/buttons";
+
+// 5. Include any optional Bootstrap components as you like
 @import "../../node_modules/bootstrap/scss/root";
 @import "../../node_modules/bootstrap/scss/reboot";
 @import "../../node_modules/bootstrap/scss/type";
 @import "../../node_modules/bootstrap/scss/containers";
+@import "../../node_modules/bootstrap/scss/buttons";
 
-// 5. Add additional custom code here
+// 6.Custom styling
+@import "./common/typography";
 
