--- a/src/sass/overrides/buttons.scss
+++ b/src/sass/overrides/buttons.scss
@@ -1,41 +1,11 @@
-// Buttons + Forms
-//
-// Shared variables that are reassigned to `$input-` and `$btn-` specific variables.
-
-// scss-docs-start input-btn-variables
-$input-btn-padding-y:         .375rem !default;
-$input-btn-padding-x:         .75rem !default;
-$input-btn-font-family:       null !default;
-$input-btn-font-size:         $font-size-base !default;
-$input-btn-line-height:       $line-height-base !default;
-
-$input-btn-focus-width:         .25rem !default;
-$input-btn-focus-color-opacity: .25 !default;
-$input-btn-focus-color:         rgba($component-active-bg, $input-btn-focus-color-opacity) !default;
-$input-btn-focus-blur:          0 !default;
-$input-btn-focus-box-shadow:    0 0 $input-btn-focus-blur $input-btn-focus-width $input-btn-focus-color !default;
-
-$input-btn-padding-y-sm:      .25rem !default;
-$input-btn-padding-x-sm:      .5rem !default;
-$input-btn-font-size-sm:      $font-size-sm !default;
-
-$input-btn-padding-y-lg:      .5rem !default;
-$input-btn-padding-x-lg:      1rem !default;
-$input-btn-font-size-lg:      $font-size-lg !default;
-
-$input-btn-border-width:      $border-width !default;
-// scss-docs-end input-btn-variables
-
-
 // Buttons
 //
 // For each of Bootstrap's buttons, define text, background, and border color.
 
-// scss-docs-start btn-variables
-$btn-padding-y:               $input-btn-padding-y !default;
-$btn-padding-x:               $input-btn-padding-x !default;
+$btn-font-size:               $h5-font-size;
+$btn-padding-y:               pxtoem(9, 16);
+$btn-padding-x:               pxtoem(28, 16);
 $btn-font-family:             $input-btn-font-family !default;
-$btn-font-size:               $input-btn-font-size !default;
 $btn-line-height:             $input-btn-line-height !default;
 $btn-white-space:             null !default; // Set to `nowrap` to prevent text wrapping
 
@@ -47,9 +17,9 @@ $btn-padding-y-lg:            $input-btn-padding-y-lg !default;
 $btn-padding-x-lg:            $input-btn-padding-x-lg !default;
 $btn-font-size-lg:            $input-btn-font-size-lg !default;
 
-$btn-border-width:            $input-btn-border-width !default;
+$btn-border-width:            2px;
 
-$btn-font-weight:             $font-weight-normal !default;
+$btn-font-weight:             $font-weight-bold;
 $btn-box-shadow:              inset 0 1px 0 rgba($white, .15), 0 1px 1px rgba($black, .075) !default;
 $btn-focus-width:             $input-btn-focus-width !default;
 $btn-focus-box-shadow:        $input-btn-focus-box-shadow !default;
@@ -75,4 +45,30 @@ $btn-active-bg-shade-amount:      20% !default;
 $btn-active-bg-tint-amount:       20% !default;
 $btn-active-border-shade-amount:  25% !default;
 $btn-active-border-tint-amount:   10% !default;
-// scss-docs-end btn-variables
+
+.btn .icon {
+    margin-right: 12px;
+    vertical-align: sub;
+    margin-left: -4px;
+}
+.btn.btn-primary {
+    --bs-btn-hover-bg: #{$blue-vibrant};
+    --bs-btn-hover-border-color: #{$blue-vibrant};
+}
+.btn.btn-outline-primary {
+    --bs-btn-hover-border-color: #{$blue-vibrant};
+    --bs-btn-hover-color: #{$blue-vibrant};
+    --bs-btn-hover-bg: #{$white};
+}
+.btn.btn-secondary {
+    --bs-btn-hover-bg: #{$green-vibrant};
+    --bs-btn-hover-border-color: #{$green-vibrant};
+}
+.btn.btn-outline-secondary {
+    --bs-btn-hover-border-color: #{$green-vibrant};
+    --bs-btn-hover-color: #{$green-vibrant};
+    --bs-btn-hover-bg: #{$white};
+}
+.btn.btn-info {
+    --bs-btn-color: #{$blue};
+}
