--- a/src/sass/overrides/variables.scss
+++ b/src/sass/overrides/variables.scss
@@ -60,9 +60,9 @@ $colors: map-merge(
 
 // Bootstrap theme colors 
 $primary:       $blue;
-$secondary:     $blue-vibrant;
+$secondary:     $green;
 $success:       $green;
-$info:          $blue-vibrant;
+$info:          $blue-20;
 $warning:       $yellow !default;
 $danger:        $red !default;
 $light:         $darkblue-20;
