--- a/src/sass/helpers/px-to-rem.scss
+++ b/src/sass/helpers/px-to-rem.scss
@@ -1,9 +1,11 @@
+@use "sass:math";
+
 @function pxtorem($value) {
-    $remValue: ($value / 16) + rem; 
+    $remValue: math.div($value, 16) + rem; 
     @return $remValue;
 }
 
 @function pxtoem($value, $base) {
-    $emValue: ($value / $base) + em; 
+    $emValue: math.div($value, $base) + em; 
     @return $emValue;
 }
