--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -30,6 +30,9 @@
 // 5. Include any optional Bootstrap components as you like
 @import "../../node_modules/bootstrap/scss/root";
 @import "../../node_modules/bootstrap/scss/reboot";
+@import "../../node_modules/bootstrap/scss/utilities";
+@import "../../node_modules/bootstrap/scss/helpers";
+@import "../../node_modules/bootstrap/scss/grid";
 @import "../../node_modules/bootstrap/scss/type";
 @import "../../node_modules/bootstrap/scss/containers";
 @import "../../node_modules/bootstrap/scss/buttons";
@@ -37,4 +40,5 @@
 // 6.Custom styling
 @import "./common/typography";
 @import "./components/icons";
+@import "./components/hero";
 
