--- a/src/sass/overrides/variables.scss
+++ b/src/sass/overrides/variables.scss
@@ -92,20 +92,21 @@ $font-size-base: 1.25rem;
 $line-height-base: 1.4;
 $line-height-sm: 1.25;
 $line-height-lg: 1.5;   
-$h1-font-size: $font-size-base * 2.8; 
-$h2-font-size: $font-size-base * 2.4;
-$h3-font-size: $font-size-base * 1.6;
-$h4-font-size: $font-size-base * 1.2;
-$h5-font-size: $font-size-base * 0.8;
-$h6-font-size: $font-size-base * 0.7;
-$h7-font-size: $font-size-base * 0.6;
+$h1-font-size: $font-size-base * 2.8; // 56
+$h2-font-size: $font-size-base * 2.4; // 48
+$h3-font-size: $font-size-base * 1.6; // 32
+$h4-font-size: $font-size-base * 1.2; // 24
+$h5-font-size: $font-size-base * 0.8; // 20
+$h6-font-size: $font-size-base * 0.7; // 16
+$h7-font-size: $font-size-base * 0.6; // 14
+$h8-font-size: $font-size-base * 0.6; // 12
 
 $headings-margin-bottom:      1rem * .5;
 $headings-font-family:        null;
 $headings-font-style:         null;
-$headings-font-weight:        500;
-$headings-line-height:        1.2;
-$headings-color:              null;
+$headings-font-weight:        700;
+$headings-line-height:        1.4;
+$headings-color:              $blue;
 
 // Border radius
 $border-radius: 99px;
