--- a/src/sass/overrides/variables.scss
+++ b/src/sass/overrides/variables.scss
@@ -130,3 +130,7 @@ $link-hover-decoration:                   null;
 // Style p element.
 $paragraph-margin-bottom:   1rem;
 
+// Grid
+//
+// Modify the Bootstrap grid
+$grid-gutter-width: 2.5rem;
