WBHUB-247: Highlight cards

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -42,4 +42,5 @@
 @import "./common/typography";
 @import "./components/icons";
 @import "./components/card";
+@import "./components/highlight-card";
 
