--- a/src/sass/components/card.scss
+++ b/src/sass/components/card.scss
@@ -3,6 +3,12 @@
     border-radius: $border-radius;
     box-shadow: 0px 4px 18px rgba(28, 37, 98, 0.1);
     padding: 20px;
+    @include media-breakpoint-down(sm) {
+        margin-bottom: 20px;
+    }
+    @include media-breakpoint-up(sm) {
+        margin-bottom: 40px;
+    }
 }
 .card__title {
     color: $blue;
@@ -10,7 +16,7 @@
     @include media-breakpoint-down(sm) {
         margin-bottom: 4px;
     }
-    @include media-breakpoint-up(sm) {
+    @include media-breakpoint-up(lg) {
         font-size: $h5-font-size;
     }
 }
