--- a/src/sass/overrides/variables.scss
+++ b/src/sass/overrides/variables.scss
@@ -92,14 +92,14 @@ $font-size-base: 1.125rem;
 $line-height-base: 1.4;
 $line-height-sm: 1.25;
 $line-height-lg: 1.5;   
-$h1-font-size: $font-size-base * 3.1; // 56
-$h2-font-size: $font-size-base * 2.66; // 48
-$h3-font-size: $font-size-base * 1.77; // 32
-$h4-font-size: $font-size-base * 1.33; // 24
-$h5-font-size: $font-size-base * 1.11; // 20
-$h6-font-size: $font-size-base * 0.88; // 16
-$h7-font-size: $font-size-base * 0.77; // 14
-$h8-font-size: $font-size-base * 0.66; // 12
+$h1-font-size: $font-size-base * 3.11111111;        // 56
+$h2-font-size: $font-size-base * 2.666666666666667; // 48
+$h3-font-size: $font-size-base * 1.777777777777778; // 32
+$h4-font-size: $font-size-base * 1.333333333333333; // 24
+$h5-font-size: $font-size-base * 1.111111111111111; // 20
+$h6-font-size: $font-size-base * 0.8888888888888889; // 16
+$h7-font-size: $font-size-base * 0.7777777777777778; // 14
+$h8-font-size: $font-size-base * 0.6666666666666667; // 12
 
 $headings-margin-bottom:      1rem * .5;
 $headings-font-family:        null;
