WBHUB-247: Introducing... the summary card and the kicker

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -41,6 +41,8 @@
 @import "./helpers/list-reset";
 @import "./common/typography";
 @import "./components/icons";
+@import "./components/kicker";
 @import "./components/card";
 @import "./components/highlight-card";
+@import "./components/summary-card";
 
