WBHUB-247: Reintroducing the card formally known as summary

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -44,5 +44,5 @@
 @import "./components/kicker";
 @import "./components/card";
 @import "./components/highlight-card";
-@import "./components/summary-card";
+@import "./components/hero-card";
 
