--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -2,47 +2,56 @@
 @font-face {
     font-family: 'AtkinsonHyperlegible';
     src: url('/fonts/atkinson-hyperlegible/EOT/Atkinson-Hyperlegible-Regular-102.eot'); /* IE9 Compat Modes */
-    src: url('/fonts/atkinson-hyperlegible/EOT/Atkinson-Hyperlegible-Regular-102.eot') format('embedded-opentype'), /* IE6-IE8 */
-        url('/fonts/atkinson-hyperlegible/WOFF2/Atkinson-Hyperlegible-Regular-102a.woff2') format('woff2'), /* Super Modern Browsers */
-        url('/fonts/atkinson-hyperlegible/WOFF/Atkinson-Hyperlegible-Regular-102.woff') format('woff'), /* Pretty Modern Browsers */
-        url('/fonts/atkinson-hyperlegible/TTF/Atkinson-Hyperlegible-Regular-102')  format('truetype'), /* Safari, Android, iOS */
-        url('/fonts/atkinson-hyperlegible/SVG/Atkinson-Hyperlegible-Regular-102') format('svg'); /* Legacy iOS */
+    src: url('/fonts/atkinson-hyperlegible/EOT/Atkinson-Hyperlegible-Regular-102.eot')
+            format('embedded-opentype'),
+        /* IE6-IE8 */
+            url('/fonts/atkinson-hyperlegible/WOFF2/Atkinson-Hyperlegible-Regular-102a.woff2')
+            format('woff2'),
+        /* Super Modern Browsers */
+            url('/fonts/atkinson-hyperlegible/WOFF/Atkinson-Hyperlegible-Regular-102.woff')
+            format('woff'),
+        /* Pretty Modern Browsers */
+            url('/fonts/atkinson-hyperlegible/TTF/Atkinson-Hyperlegible-Regular-102')
+            format('truetype'),
+        /* Safari, Android, iOS */
+            url('/fonts/atkinson-hyperlegible/SVG/Atkinson-Hyperlegible-Regular-102')
+            format('svg'); /* Legacy iOS */
     font-weight: 400;
     font-style: normal;
     font-display: swap;
 }
 
 // 1. Include functions first (so you can manipulate colors, SVGs, calc, etc)
-@import "../../node_modules/bootstrap/scss/functions";
-@import "./helpers/px-to-rem";
+@import '../../node_modules/bootstrap/scss/functions';
+@import './helpers/px-to-rem';
 
 // 2. Include any default variable overrides here
-@import "./overrides/variables";
+@import './overrides/variables';
 
 // 3. Include remainder of required Bootstrap stylesheets
-@import "../../node_modules/bootstrap/scss/variables";
-@import "../../node_modules/bootstrap/scss/mixins";
-@import "../../node_modules/bootstrap/scss/maps";
+@import '../../node_modules/bootstrap/scss/variables';
+@import '../../node_modules/bootstrap/scss/mixins';
+@import '../../node_modules/bootstrap/scss/maps';
 
 // 4. Component variable overrides
-@import "./overrides/buttons";
+@import './overrides/buttons';
 
 // 5. Include any optional Bootstrap components as you like
-@import "../../node_modules/bootstrap/scss/root";
-@import "../../node_modules/bootstrap/scss/reboot";
-@import "../../node_modules/bootstrap/scss/helpers";
-@import "../../node_modules/bootstrap/scss/utilities";
-@import "../../node_modules/bootstrap/scss/type";
-@import "../../node_modules/bootstrap/scss/bootstrap-grid";
-@import "../../node_modules/bootstrap/scss/containers";
-@import "../../node_modules/bootstrap/scss/buttons";
+@import '../../node_modules/bootstrap/scss/root';
+@import '../../node_modules/bootstrap/scss/reboot';
+@import '../../node_modules/bootstrap/scss/helpers';
+@import '../../node_modules/bootstrap/scss/utilities';
+@import '../../node_modules/bootstrap/scss/type';
+@import '../../node_modules/bootstrap/scss/bootstrap-grid';
+@import '../../node_modules/bootstrap/scss/containers';
+@import '../../node_modules/bootstrap/scss/buttons';
 
 // 6.Custom styling
-@import "./helpers/list-reset";
-@import "./common/typography";
-@import "./components/icons";
-@import "./components/kicker";
-@import "./components/card";
-@import "./components/highlight-card";
-@import "./components/hero-card";
-
+@import './helpers/list-reset';
+@import './common/typography';
+@import './components/icons';
+@import './components/kicker';
+@import './components/card';
+@import './components/highlight-card';
+@import './components/summary-card';
+@import './components/hero-card';
