--- a/src/sass/components/icons.scss
+++ b/src/sass/components/icons.scss
@@ -1,147 +1,147 @@
 @charset "UTF-8";
 
 @font-face {
-  font-family: "teen-tips";
-  src:url("/fonts/icons/teen-tips.eot");
-  src:url("/fonts/icons/teen-tips.eot?#iefix") format("embedded-opentype"),
-    url("/fonts/icons/teen-tips.woff") format("woff"),
-    url("/fonts/icons/teen-tips.ttf") format("truetype"),
-    url("/fonts/icons/teen-tips.svg#teen-tips") format("svg");
-  font-weight: normal;
-  font-style: normal;
+    font-family: 'teen-tips';
+    src: url('/fonts/icons/teen-tips.eot');
+    src: url('/fonts/icons/teen-tips.eot?#iefix') format('embedded-opentype'),
+        url('/fonts/icons/teen-tips.woff') format('woff'),
+        url('/fonts/icons/teen-tips.ttf') format('truetype'),
+        url('/fonts/icons/teen-tips.svg#teen-tips') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 
 [data-icon]:before {
-  font-family: "teen-tips" !important;
-  content: attr(data-icon);
-  font-style: normal !important;
-  font-weight: normal !important;
-  font-variant: normal !important;
-  text-transform: none !important;
-  speak: none;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font-family: 'teen-tips' !important;
+    content: attr(data-icon);
+    font-style: normal !important;
+    font-weight: normal !important;
+    font-variant: normal !important;
+    text-transform: none !important;
+    speak: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
-[class^="icon-"]:before,
-[class*=" icon-"]:before {
-  font-family: "teen-tips" !important;
-  font-style: normal !important;
-  font-weight: normal !important;
-  font-variant: normal !important;
-  text-transform: none !important;
-  speak: none;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+[class^='icon-']:before,
+[class*=' icon-']:before {
+    font-family: 'teen-tips' !important;
+    font-style: normal !important;
+    font-weight: normal !important;
+    font-variant: normal !important;
+    text-transform: none !important;
+    speak: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .icon-arrowdown:before {
-  content: "\61";
+    content: '\61';
 }
 .icon-arrowleft:before {
-  content: "\62";
+    content: '\62';
 }
 .icon-arrowright:before {
-  content: "\63";
+    content: '\63';
 }
 .icon-arrowup:before {
-  content: "\64";
+    content: '\64';
 }
 .icon-article:before {
-  content: "\65";
+    content: '\65';
 }
 .icon-chat:before {
-  content: "\66";
+    content: '\66';
 }
 .icon-checkbox:before {
-  content: "\67";
+    content: '\67';
 }
 .icon-close:before {
-  content: "\68";
+    content: '\68';
 }
 .icon-content:before {
-  content: "\69";
+    content: '\69';
 }
 .icon-course:before {
-  content: "\6a";
+    content: '\6a';
 }
 .icon-download:before {
-  content: "\6b";
+    content: '\6b';
 }
 .icon-email:before {
-  content: "\6c";
+    content: '\6c';
 }
 .icon-event:before {
-  content: "\6d";
+    content: '\6d';
 }
 .icon-phone:before {
-  content: "\6e";
+    content: '\6e';
 }
 .icon-nav-down:before {
-  content: "\6f";
+    content: '\6f';
 }
 .icon-menu:before {
-  content: "\70";
+    content: '\70';
 }
 .icon-medialaptop:before {
-  content: "\71";
+    content: '\71';
 }
 .icon-link-arrow:before {
-  content: "\72";
+    content: '\72';
 }
 .icon-link:before {
-  content: "\73";
+    content: '\73';
 }
 .icon-jump-up:before {
-  content: "\74";
+    content: '\74';
 }
 .icon-jump-down:before {
-  content: "\75";
+    content: '\75';
 }
 .icon-favourited:before {
-  content: "\76";
+    content: '\76';
 }
 .icon-favorite:before {
-  content: "\77";
+    content: '\77';
 }
 .icon-faqs:before {
-  content: "\78";
+    content: '\78';
 }
 .icon-exit:before {
-  content: "\79";
+    content: '\79';
 }
 .icon-qa:before {
-  content: "\7a";
+    content: '\7a';
 }
 .icon-search:before {
-  content: "\41";
+    content: '\41';
 }
 .icon-self-care:before {
-  content: "\42";
+    content: '\42';
 }
 .icon-share:before {
-  content: "\43";
+    content: '\43';
 }
 .icon-support:before {
-  content: "\44";
+    content: '\44';
 }
 .icon-headphone:before {
-  content: "\45";
+    content: '\45';
 }
 .icon-tick:before {
-  content: "\46";
+    content: '\46';
 }
 .icon-topics:before {
-  content: "\47";
+    content: '\47';
 }
 .icon-unlock:before {
-  content: "\48";
+    content: '\48';
 }
 .icon-user:before {
-  content: "\49";
+    content: '\49';
 }
 .icon-video:before {
-  content: "\4a";
+    content: '\4a';
 }
