WHUB-247: Prettier, gotta

--- a/src/sass/components/summary-card.scss
+++ b/src/sass/components/summary-card.scss
@@ -29,8 +29,8 @@
     position: absolute;
     right: 0;
     top: 0;
-    height: pxtoem(32,18);
-    width: pxtoem(32,18);
+    height: pxtoem(32, 18);
+    width: pxtoem(32, 18);
     display: flex;
     justify-content: center;
     align-items: center;
