--- a/src/sass/components/summary-card.scss
+++ b/src/sass/components/summary-card.scss
@@ -39,11 +39,19 @@
     background: $blue-10;
     color: $blue;
 }
-.summary-card--large {
+.summary-card--with-image {
     overflow: hidden;
     background: $white;
     border-radius: $border-radius;
     box-shadow: 0px 4px 18px rgba(28, 37, 98, 0.1);
+    .summary-card__body {
+        margin: 30px;
+    }
+    .summary-card__text {
+        font-size: $h6-font-size;
+    }
+}
+.summary-card--large {
     .summary-card__body {
         margin: 30px;
         @include media-breakpoint-up(sm) {
