--- a/src/sass/components/highlight-card.scss
+++ b/src/sass/components/highlight-card.scss
@@ -22,10 +22,15 @@
     }
 }
 .highlight-card__image {
-    border-radius: $border-radius;
-    filter: drop-shadow(0px 4px 18px rgba(28, 37, 98, 0.1));
     width: 99px;
     position: absolute;
     right: -20px;
     top: -35px;
+    border-radius: $border-radius;
+    filter: drop-shadow(0px 4px 18px rgba(28, 37, 98, 0.1));
+    @include media-breakpoint-up(lg) {
+        width: 128px;
+        top: 2.5rem;
+        right: -64px;
+    }
 }
