WBHUB-246: Implemented the other two hero components

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -49,6 +49,7 @@
 // 6.Custom styling
 @import './helpers/list-reset';
 @import './common/typography';
+@import './common/images';
 @import './components/icons';
 @import './components/kicker';
 @import './components/card';
