--- a/src/sass/overrides/variables.scss
+++ b/src/sass/overrides/variables.scss
@@ -65,8 +65,8 @@ $success: $green;
 $info: $blue-20;
 $warning: $yellow !default;
 $danger: $red !default;
-$light: $darkblue-20;
-$dark: $black;
+$light: $darkblue-5;
+$dark: $darkblue;
 
 $theme-colors: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
