--- a/src/sass/components/summary-card.scss
+++ b/src/sass/components/summary-card.scss
@@ -1,5 +1,3 @@
-.summary-card {
-}
 .summary-card__title {
     font-size: $h6-font-size;
     margin-bottom: 4px;
@@ -21,6 +19,7 @@
 }
 .summary-card__text {
     font-size: $h7-font-size;
+    margin: 0;
 }
 .summary-card__body {
     position: relative;
@@ -38,6 +37,11 @@
     border-radius: 8px;
     background: $blue-10;
     color: $blue;
+}
+.summary-card__footer {
+    display: flex;
+    gap: 4px;
+    margin-top: 12px;
 }
 .summary-card--with-image {
     overflow: hidden;
