WHUB-251: Light theme banner

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -58,5 +58,6 @@
 @import './components/highlight-card';
 @import './components/summary-card';
 @import './components/hero';
+@import './components/banner';
 @import './components/buttons';
 @import './components/badge';
