--- a/src/sass/components/banner.scss
+++ b/src/sass/components/banner.scss
@@ -7,6 +7,13 @@
         padding-bottom: pxtorem(160);
     }
 }
+.banner--dark {
+    color: $white;
+}
+.banner--flipped {
+    padding-top: 80px;
+    padding-bottom: 80px;
+}
 .banner__content {
     position: relative;
     padding: 30px;
@@ -15,9 +22,20 @@
     }
     border-radius: $border-radius;
     background: $blue-10;
+    .banner--dark & {
+        background: $blue;
+        color: $white;
+        @include media-breakpoint-up(lg) {
+            padding: 58px 70px 66px;
+        }
+    }
 }
 .banner__title {
     @include font-size($h3-font-size);
+    .banner--dark & {
+        color: $white;
+        @include font-size($h1-font-size);
+    }
 }
 .banner__body {
     font-size: $h6-font-size;
@@ -43,6 +61,13 @@
     @include media-breakpoint-up(lg) {
         font-size: pxtorem($banner-icon-desktop-font-size);
     }
+    .banner--flipped & {
+        @include media-breakpoint-up(lg) {
+            right: auto;
+            left: -(pxtoem(32, $banner-icon-mobile-font-size));
+            top: 52px;
+        }
+    }
 }
 .banner__actions {
     margin-top: 24px;
@@ -62,8 +87,20 @@
         top: 0;
         left: -2.5rem;
     }
+    .banner--flipped & {
+        @include media-breakpoint-up(lg) {
+            left: auto;
+            top: 0;
+            right: -2.5rem;
+        }
+    }
 }
 .banner__image {
     overflow: hidden;
     border-radius: $border-radius;
+    .banner--flipped & {
+        @include media-breakpoint-down(sm) {
+            max-width: 200px;
+        }
+    }
 }
