WHUB-255: Tweaked button padding to match design

--- a/src/sass/components/buttons.scss
+++ b/src/sass/components/buttons.scss
@@ -1,5 +1,7 @@
 // Button CSS
 .btn {
+    padding-top: pxtorem(10);
+    padding-bottom: pxtorem(8);
     @include media-breakpoint-down(sm) {
         display: block;
         text-align: center;
