--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -61,3 +61,4 @@
 @import './components/banner';
 @import './components/buttons';
 @import './components/badge';
+@import './components/featured-content-listing';
