--- a/src/sass/overrides/variables.scss
+++ b/src/sass/overrides/variables.scss
@@ -7,22 +7,19 @@
 //
 $blue: #334fb4;
 $blue-vibrant: #349ce2;
-$blue-xbright: #66ccff;
+$blue-xbright: #6cf;
 $blue-20: #d5ebff;
 $blue-10: #ebf5ff;
 $blue-5: #f5faff;
-
 $darkblue: #2a297c;
 $darkblue-50: #8890b1;
 $darkblue-20: #cfcfda;
 $darkblue-10: #ebebef;
 $darkblue-5: #f7f7f8;
-
 $green: #397d1c;
 $green-vibrant: #7ed957;
-
 $berry: #e40259;
-$white: #ffffff;
+$white: #fff;
 $black: #343434;
 
 // Default Bootstrap colors
@@ -36,24 +33,23 @@ $yellow: #ffc107 !default;
 $green: #198754 !default;
 $teal: #20c997 !default;
 $cyan: #0dcaf0 !default;
-
 $colors: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
 $colors: map-merge(
     (
-        'blue': $blue,
-        'indigo': $indigo,
-        'purple': $purple,
-        'pink': $pink,
-        'red': $red,
-        'orange': $orange,
-        'yellow': $yellow,
-        'green': $green,
-        'teal': $teal,
-        'cyan': $cyan,
-        'white': $white,
-        'gray': $darkblue-20,
-        'gray-dark': $darkblue-50,
+        "blue": $blue,
+        "indigo": $indigo,
+        "purple": $purple,
+        "pink": $pink,
+        "red": $red,
+        "orange": $orange,
+        "yellow": $yellow,
+        "green": $green,
+        "teal": $teal,
+        "cyan": $cyan,
+        "white": $white,
+        "gray": $darkblue-20,
+        "gray-dark": $darkblue-50,
     ),
     $colors
 );
@@ -67,31 +63,30 @@ $warning: $yellow !default;
 $danger: $red !default;
 $light: $darkblue-5;
 $dark: $darkblue;
-
 $theme-colors: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
 $theme-colors: map-merge(
     (
-        'primary': $primary,
-        'secondary': $secondary,
-        'success': $success,
-        'info': $info,
-        'warning': $warning,
-        'danger': $danger,
-        'light': $light,
-        'dark': $dark,
+        "primary": $primary,
+        "secondary": $secondary,
+        "success": $success,
+        "info": $info,
+        "warning": $warning,
+        "danger": $danger,
+        "light": $light,
+        "dark": $dark,
     ),
     $theme-colors
 );
 
 // Typography
 //
-$font-family-sans-serif: 'DM Sans', 'Helvetica Neue', 'Noto Sans',
-    'Liberation Sans', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-    'Segoe UI Symbol', 'Noto Color Emoji';
-$font-family-copy: 'AtkinsonHyperlegible', 'Helvetica Neue', 'Noto Sans',
-    'Liberation Sans', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-    'Segoe UI Symbol', 'Noto Color Emoji';
+$font-family-sans-serif: "DM Sans", "Helvetica Neue", "Noto Sans",
+    "Liberation Sans", arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol", "Noto Color Emoji";
+$font-family-copy: "AtkinsonHyperlegible", "Helvetica Neue", "Noto Sans",
+    "Liberation Sans", arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol", "Noto Color Emoji";
 $font-size-base: 1.125rem;
 $line-height-base: 1.4;
 $line-height-sm: 1.25;
