--- a/src/sass/components/highlight-card.scss
+++ b/src/sass/components/highlight-card.scss
@@ -4,30 +4,38 @@
     color: $white;
     border-radius: $border-radius;
     position: relative;
+
     @include media-breakpoint-up(lg) {
         padding-right: 100px;
     }
 }
+
 .highlight-card__title {
     color: $green-vibrant;
+
     @include font-size($h3-font-size);
 }
+
 .highlight-card__icon {
     margin-right: 8px;
 }
+
 .highlight-card__body {
     margin-left: pxtorem(32);
+
     @include media-breakpoint-up(lg) {
         margin-left: pxtorem(40);
     }
 }
+
 .highlight-card__image {
     width: 99px;
     position: absolute;
     right: -20px;
     top: -35px;
     border-radius: $border-radius;
-    filter: drop-shadow(0px 4px 18px rgba(28, 37, 98, 0.1));
+    filter: drop-shadow(0 4px 18px rgb(28 37 98 / 10%));
+
     @include media-breakpoint-up(lg) {
         width: 128px;
         top: 2.5rem;
