--- a/src/sass/components/icons.scss
+++ b/src/sass/components/icons.scss
@@ -1,18 +1,19 @@
 @charset "UTF-8";
 
 @font-face {
-    font-family: 'teen-tips';
-    src: url('/fonts/icons/teen-tips.eot');
-    src: url('/fonts/icons/teen-tips.eot?#iefix') format('embedded-opentype'),
-        url('/fonts/icons/teen-tips.woff') format('woff'),
-        url('/fonts/icons/teen-tips.ttf') format('truetype'),
-        url('/fonts/icons/teen-tips.svg#teen-tips') format('svg');
+    font-family: teen-tips;
+    src: url("/fonts/icons/teen-tips.eot");
+    src:
+        url("/fonts/icons/teen-tips.eot?#iefix") format("embedded-opentype"),
+        url("/fonts/icons/teen-tips.woff") format("woff"),
+        url("/fonts/icons/teen-tips.ttf") format("truetype"),
+        url("/fonts/icons/teen-tips.svg#teen-tips") format("svg");
     font-weight: normal;
     font-style: normal;
 }
 
-[data-icon]:before {
-    font-family: 'teen-tips' !important;
+[data-icon]::before {
+    font-family: teen-tips !important;
     content: attr(data-icon);
     font-style: normal !important;
     font-weight: normal !important;
@@ -24,9 +25,9 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
-[class^='icon-']:before,
-[class*=' icon-']:before {
-    font-family: 'teen-tips' !important;
+[class^="icon-"]::before,
+[class*=" icon-"]::before {
+    font-family: teen-tips !important;
     font-style: normal !important;
     font-weight: normal !important;
     font-variant: normal !important;
@@ -37,111 +38,146 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-arrowdown:before {
-    content: '\61';
+.icon-arrowdown::before {
+    content: "\61";
 }
-.icon-arrowleft:before {
-    content: '\62';
+
+.icon-arrowleft::before {
+    content: "\62";
 }
-.icon-arrowright:before {
-    content: '\63';
+
+.icon-arrowright::before {
+    content: "\63";
 }
-.icon-arrowup:before {
-    content: '\64';
+
+.icon-arrowup::before {
+    content: "\64";
 }
-.icon-article:before {
-    content: '\65';
+
+.icon-article::before {
+    content: "\65";
 }
-.icon-chat:before {
-    content: '\66';
+
+.icon-chat::before {
+    content: "\66";
 }
-.icon-checkbox:before {
-    content: '\67';
+
+.icon-checkbox::before {
+    content: "\67";
 }
-.icon-close:before {
-    content: '\68';
+
+.icon-close::before {
+    content: "\68";
 }
-.icon-content:before {
-    content: '\69';
+
+.icon-content::before {
+    content: "\69";
 }
-.icon-course:before {
-    content: '\6a';
+
+.icon-course::before {
+    content: "\6a";
 }
-.icon-download:before {
-    content: '\6b';
+
+.icon-download::before {
+    content: "\6b";
 }
-.icon-email:before {
-    content: '\6c';
+
+.icon-email::before {
+    content: "\6c";
 }
-.icon-event:before {
-    content: '\6d';
+
+.icon-event::before {
+    content: "\6d";
 }
-.icon-phone:before {
-    content: '\6e';
+
+.icon-phone::before {
+    content: "\6e";
 }
-.icon-nav-down:before {
-    content: '\6f';
+
+.icon-nav-down::before {
+    content: "\6f";
 }
-.icon-menu:before {
-    content: '\70';
+
+.icon-menu::before {
+    content: "\70";
 }
-.icon-medialaptop:before {
-    content: '\71';
+
+.icon-medialaptop::before {
+    content: "\71";
 }
-.icon-link-arrow:before {
-    content: '\72';
+
+.icon-link-arrow::before {
+    content: "\72";
 }
-.icon-link:before {
-    content: '\73';
+
+.icon-link::before {
+    content: "\73";
 }
-.icon-jump-up:before {
-    content: '\74';
+
+.icon-jump-up::before {
+    content: "\74";
 }
-.icon-jump-down:before {
-    content: '\75';
+
+.icon-jump-down::before {
+    content: "\75";
 }
-.icon-favourited:before {
-    content: '\76';
+
+.icon-favourited::before {
+    content: "\76";
 }
-.icon-favorite:before {
-    content: '\77';
+
+.icon-favorite::before {
+    content: "\77";
 }
-.icon-faqs:before {
-    content: '\78';
+
+.icon-faqs::before {
+    content: "\78";
 }
-.icon-exit:before {
-    content: '\79';
+
+.icon-exit::before {
+    content: "\79";
 }
-.icon-qa:before {
-    content: '\7a';
+
+.icon-qa::before {
+    content: "\7a";
 }
-.icon-search:before {
-    content: '\41';
+
+.icon-search::before {
+    content: "\41";
 }
-.icon-self-care:before {
-    content: '\42';
+
+.icon-self-care::before {
+    content: "\42";
 }
-.icon-share:before {
-    content: '\43';
+
+.icon-share::before {
+    content: "\43";
 }
-.icon-support:before {
-    content: '\44';
+
+.icon-support::before {
+    content: "\44";
 }
-.icon-headphone:before {
-    content: '\45';
+
+.icon-headphone::before {
+    content: "\45";
 }
-.icon-tick:before {
-    content: '\46';
+
+.icon-tick::before {
+    content: "\46";
 }
-.icon-topics:before {
-    content: '\47';
+
+.icon-topics::before {
+    content: "\47";
 }
-.icon-unlock:before {
-    content: '\48';
+
+.icon-unlock::before {
+    content: "\48";
 }
-.icon-user:before {
-    content: '\49';
+
+.icon-user::before {
+    content: "\49";
 }
-.icon-video:before {
-    content: '\4a';
+
+.icon-video::before {
+    content: "\4a";
 }
