WHUB-252: Fixed Unexpected unknown at-rule @use and Expected variable to be kebab-case

--- a/src/sass/helpers/px-to-rem.scss
+++ b/src/sass/helpers/px-to-rem.scss
@@ -1,13 +1,13 @@
 @use "sass:math";
 
 @function pxtorem($value) {
-    $remValue: math.div($value, 16) + rem;
+    $rem-value: math.div($value, 16) + rem;
 
-    @return $remValue;
+    @return $rem-value;
 }
 
 @function pxtoem($value, $base) {
-    $emValue: math.div($value, $base) + em;
+    $em-value: math.div($value, $base) + em;
 
-    @return $emValue;
+    @return $em-value;
 }
