--- a/src/sass/overrides/variables.scss
+++ b/src/sass/overrides/variables.scss
@@ -1,6 +1,7 @@
 // Variables
 // Variables should follow the `$component-state-property-size` formula for
 // consistent naming. Ex: $nav-link-disabled-color and $modal-content-box-shadow-xs.
+@use "sass:map";
 
 // Color system
 $blue: #334fb4;
@@ -33,7 +34,7 @@ $teal: #20c997 !default;
 $cyan: #0dcaf0 !default;
 $colors: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
-$colors: map-merge(
+$colors: map.merge(
     (
         "blue": $blue,
         "indigo": $indigo,
@@ -63,7 +64,7 @@ $light: $darkblue-5;
 $dark: $darkblue;
 $theme-colors: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
-$theme-colors: map-merge(
+$theme-colors: map.merge(
     (
         "primary": $primary,
         "secondary": $secondary,
