--- a/src/sass/components/carousel.scss
+++ b/src/sass/components/carousel.scss
@@ -1,19 +1,66 @@
 .carousel {
+    overflow: hidden;
+    position: relative;
     background: $blue;
     color: $white;
-    overflow: hidden;
+}
+
+.carousel__column-one {
+    @include media-breakpoint-down(md) {
+        padding-left: 30px;
+    }
+}
+.carousel__column-two {
+    @include media-breakpoint-down(md) {
+        padding-right: 30px;
+    }
+}
+
+.carousel__prev {
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    display: block;
+    z-index: 2;
+    background: none;
+    border: 0;
+    color: $white;
+    font-size: pxtorem(16);
+    @include media-breakpoint-up(md) {
+        left: 77px;
+        font-size: pxtorem(32);
+    }
+}
+.carousel__next {
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    display: block;
+    z-index: 2;
+    background: none;
+    border: 0;
+    color: $white;
+    font-size: pxtorem(16);
+    @include media-breakpoint-up(md) {
+        right: 77px;
+        font-size: pxtorem(32);
+    }
 }
 
 .carousel__item {
     display: flex;
     padding-top: 40px;
     padding-bottom: 40px;
+
     @include media-breakpoint-up(md) {
         align-items: center;
         padding-top: 96px;
         padding-bottom: 97px;
     }
 }
+
 .carousel__body {
     padding-top: 15px;
     margin-top: -15px;
@@ -21,12 +68,14 @@
     margin-left: -16px;
     padding-bottom: pxtorem(15);
     margin-bottom: 0;
-    background: url(/images/ui/quote.svg) no-repeat,
-    url(/images/ui/quote.svg) bottom right no-repeat;
+    background:
+        url("/images/ui/quote.svg") no-repeat,
+        url("/images/ui/quote.svg") bottom right no-repeat;
     background-size: 66px auto;
     font-size: $h6-font-size;
     font-family: $font-family-sans-serif;
     font-weight: 500;
+
     @include media-breakpoint-up(md) {
         padding-top: 25px;
         margin-top: -25px;
@@ -34,19 +83,22 @@
         margin-left: -45px;
         padding-bottom: pxtorem(25);
         font-size: pxtorem(24);
-        background: url(/images/ui/quote.svg) no-repeat,
-        url(/images/ui/quote.svg) bottom right 30% no-repeat;
+        background:
+            url("/images/ui/quote.svg") no-repeat,
+            url("/images/ui/quote.svg") bottom right 30% no-repeat;
         background-size: 110px auto;
     }
 }
+
 .carousel__byline {
     font-size: $h7-font-size;
     font-family: $font-family-sans-serif;
     font-weight: bold;
 }
+
 .carousel__image {
-    border-radius: $border-radius;
     position: relative;
+    
     &::after {
         content: "";
         display: block;
@@ -55,8 +107,9 @@
         position: absolute;
         bottom: -30px;
         right: -35px;
-        background: rgba($darkblue,0.2);
+        background: rgba($darkblue, 0.2);
         border-radius: $border-radius;
+        
         @include media-breakpoint-up(md) {
             width: 69%;
             padding-bottom: 69%;
@@ -65,10 +118,11 @@
             left: -111px;
             border-radius: $border-radius $border-radius 0 0;
         }
-
     }
+    
     img {
         position: relative;
         z-index: 2;
+        border-radius: $border-radius;
     }
 }
