WHUB-253: Site footer

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -45,3 +45,4 @@
 @import "./components/badge";
 @import "./components/featured-content-listing";
 @import "./components/carousel";
+@import "./components/site-footer";
