--- a/src/sass/components/icons.scss
+++ b/src/sass/components/icons.scss
@@ -183,3 +183,44 @@
 .icon-video::before {
     content: "\4a";
 }
+
+.icon-facebook::before {
+    content: "";
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    background: url('/images/ui/facebook.svg') 0 0 no-repeat;
+    background-size: 100% auto;
+}
+.icon-linkedin::before {
+    content: "";
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    background: url('/images/ui/linkedin.svg') 0 0 no-repeat;
+    background-size: 100% auto;
+}
+.icon-twitter::before {
+    content: "";
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    background: url('/images/ui/twitter.svg') 0 0 no-repeat;
+    background-size: 100% auto;
+}
+.icon-youtube::before {
+    content: "";
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    background: url('/images/ui/youtube.svg') 0 0 no-repeat;
+    background-size: 100% auto;
+}
+.icon-instagram::before {
+    content: "";
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    background: url('/images/ui/instagram.svg') 0 0 no-repeat;
+    background-size: 100% auto;
+}
