WHUB-254: Added eleventy for basic html partials

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -45,4 +45,5 @@
 @import "./components/badge";
 @import "./components/featured-content-listing";
 @import "./components/carousel";
+@import "./components/site-header";
 @import "./components/site-footer";
