WHUB-254: Moved site footer and head into includes

--- a/src/_includes/site-header.html
+++ b/src/_includes/site-header.html
@@ -1,5 +1,22 @@
 <header class="site-header">
     <div class="container">
-        <h1 class="site-header__logo">The Wellbeing Hub, from Teen Tips</h1>
+        <div class="row">
+            <h1 class="col site-header__logo">The Wellbeing Hub, from Teen Tips</h1>
+            <nav class="col site-header__nav">
+                <ul class="list-reset">
+                    <li>Courses</li>
+                    <li>Resources</li>
+                    <li>Events</li>
+                    <li>FAQS</li>
+                    <li>Support</li>
+                </ul>
+            </nav>
+            <div class="col site-header__search">
+                <button class="icon icon-search"><span class="visually-hidden">Search</span></button>
+            </div>
+            <div class="col site-header__account>">
+                <a class="btn btn-outline-inverse" href="#"><span class="icon icon-user"></span>Your account</a>
+            </div>
+        </div>
     </div>
 </header>
