--- a/src/sass/overrides/buttons.scss
+++ b/src/sass/overrides/buttons.scss
@@ -8,9 +8,9 @@ $btn-font-family: $input-btn-font-family !default;
 $btn-line-height: $input-btn-line-height !default;
 $btn-white-space: null !default; // Set to `nowrap` to prevent text wrapping
 
-$btn-padding-y-sm: $input-btn-padding-y-sm !default;
-$btn-padding-x-sm: $input-btn-padding-x-sm !default;
-$btn-font-size-sm: $input-btn-font-size-sm !default;
+$btn-padding-y-sm: pxtoem(12, 14);
+$btn-padding-x-sm: pxtoem(18, 14);
+$btn-font-size-sm: $h7-font-size;
 $btn-padding-y-lg: $input-btn-padding-y-lg !default;
 $btn-padding-x-lg: $input-btn-padding-x-lg !default;
 $btn-font-size-lg: $input-btn-font-size-lg !default;
@@ -27,8 +27,8 @@ $btn-link-disabled-color: $gray-600 !default;
 
 // Allows for customizing button radius independently from global border radius
 $btn-border-radius: 99px;
-$btn-border-radius-sm: $border-radius-sm !default;
-$btn-border-radius-lg: $border-radius-lg !default;
+$btn-border-radius-sm: $btn-border-radius;
+$btn-border-radius-lg: $btn-border-radius;
 $btn-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
     border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out !default;
 $btn-hover-bg-shade-amount: 15% !default;
