WBHUB-254: Added Headroom

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -47,3 +47,4 @@
 @import "./components/carousel";
 @import "./components/site-header";
 @import "./components/site-footer";
+@import "./components/headroom";
