--- a/src/_includes/site-header.html
+++ b/src/_includes/site-header.html
@@ -1,4 +1,4 @@
-<header class="site-header">
+<header class="js-site-header site-header">
     <div class="container">
         <div class="row">
             <div class="col-9 col-md-3">
