--- a/src/sass/components/site-header.scss
+++ b/src/sass/components/site-header.scss
@@ -1,8 +1,14 @@
 .site-header {
-    background: $darkblue;
-    color: $white;
+    position: fixed;
+    position: fixed;
+    z-index: 10;
+    right: 0;
+    left: 0;
+    top: 0;
     padding-top: 24px;
     padding-bottom: 24px;
+    background: $darkblue;
+    color: $white;
     @include media-breakpoint-up(md) {
         padding-top: 29px;
         padding-bottom: 29px;
