WHUB-254: TBD just modifying the btn component heavily for icon alignment

--- a/src/_includes/site-header.html
+++ b/src/_includes/site-header.html
@@ -6,11 +6,11 @@
             </div>
             <nav class="col col-md-6 col-xxl-5 offset-xxl-1 site-header__nav d-flex">
                 <ul class="list-reset d-flex align-items-center justify-content-between flex-fill">
-                    <li><button  class="site-header__nav-item">Courses <span class="site-header__nav-item-icon icon icon-nav-down"></span></button></li>
-                    <li><button  class="site-header__nav-item">Resources <span class="site-header__nav-item-icon icon icon-nav-down"></span></button></li>
-                    <li><button  class="site-header__nav-item">Events <span class="site-header__nav-item-icon icon icon-nav-down"></span></button></li>
-                    <li><button  class="site-header__nav-item">FAQS <span class="site-header__nav-item-icon icon icon-nav-down"></span></button></li>
-                    <li><button  class="site-header__nav-item">Support <span class="site-header__nav-item-icon icon icon-nav-down"></span></button></li>
+                    <li><button class="btn btn-invisible btn-sm site-header__nav-item">Courses <span class="site-header__nav-item-icon icon icon-nav-down"></span></button></li>
+                    <li><button class="btn btn-invisible btn-sm site-header__nav-item">Resources <span class="site-header__nav-item-icon icon icon-nav-down"></span></button></li>
+                    <li><button class="btn btn-invisible btn-sm site-header__nav-item">Events <span class="site-header__nav-item-icon icon icon-nav-down"></span></button></li>
+                    <li><button class="btn btn-invisible btn-sm site-header__nav-item">FAQS <span class="site-header__nav-item-icon icon icon-nav-down"></span></button></li>
+                    <li><button class="btn btn-invisible btn-sm site-header__nav-item">Support <span class="site-header__nav-item-icon icon icon-nav-down"></span></button></li>
                 </ul>
             </nav>
             <div class="col d-flex justify-content-end">
