--- a/src/sass/components/site-header.scss
+++ b/src/sass/components/site-header.scss
@@ -1,5 +1,7 @@
+body {
+    scroll-padding-top: 50px;
+}
 .site-header {
-    position: fixed;
     position: fixed;
     z-index: 10;
     right: 0;
@@ -31,17 +33,6 @@
     color: $white;
 }
 
-.site-header__nav-item {
-    padding: pxtorem(12) 0; 
-    background: none;
-    border: 0;
-    font-size: $h7-font-size;
-    font-family: $font-family-sans-serif;
-    font-weight: 700;
-    color: $white;
-}
 .site-header__nav-item-icon {
-    padding: 0 18px 0 12px;
     font-size: $h8-font-size;
-    vertical-align: sub;
 }
