WHUB-254: The navigation is functional on desktop. Loads of content to import still

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -46,5 +46,6 @@
 @import "./components/featured-content-listing";
 @import "./components/carousel";
 @import "./components/site-header";
-@import "./components/site-footer";
 @import "./components/headroom";
+@import "./components/nav-over";
+@import "./components/site-footer";
